tests/negative/runtime/string_index_large/input.ci
void main() {
    string s = "abc";
    print(s[99] + "\n");
}
